<resources>
    <string name="app_name">Неудахин Алексей</string>
    <string name="rating">Рейтинг</string>
    <string name="num_rating">5</string>
    <string name="write_rows_cod">Написано строк кода</string>
    <string name="num_rows_cod">5</string>
    <string name="projects">Проектов</string>
    <string name="num_projects">5</string>
    <string name="long_text">Например, некая раса сверхразумных панпространственных существ когда-то создала гигантский суперкомпьютер по  имени  Пронзительный  Интеллектомат, которому предстояло вычислить точный  и  окончательный  Ответ  на  Великий Вопрос Жизни, Вселенной и Всего Остального. В течение семи с половиной миллионов  лет  Пронзительный  Интеллектомат проводил вычисления и расчеты, пока не объявил, что истинный Ответ  -  это сорок два, что повлекло за собой необходимость создания другого, еще более гигантского компьютера, который и должен был подобрать к Ответу правильный Вопрос.</string>
    <string name="change_profile_photo">Изменить фотографию профиля</string>
    <string name="user_profile_dialog_gallery">Загрузить из галлереи</string>
    <string name="user_profile_dialog_storage">Сделать снимок</string>
    <string name="user_profile_dialog_cancel">Отмена</string>
    <string name="user_profile_dialog_title">Изменить фотографию профиля</string>
    <string name="choose_file">Выберите файл</string>
</resources>
